@@ -174,5 +174,6 @@ lazy val javaOptionsSettings = Seq(
   "--add-modules=jdk.incubator.concurrent",
   "--add-opens java.base/jdk.internal.vm=ALL-UNNAMED",
   "--add-exports java.base/jdk.internal.vm=ALL-UNNAMED",
-  "--enable-preview"
+  "--enable-preview",
+  "--add-modules jdk.incubator.concurrent"
 )
